--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@RckLVnPtRv61824" />
+    <meta property="og:url" content="https://karaage-again.vercel.app/" />
+    <meta property="og:title" content="からあげアゲイン" />
+    <meta property="og:description" content="あのからあげをもう一度" />
+    <meta property="og:image" content="%PUBLIC_URL%/karaageagain_thumbnail.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
